--- a/.env.example
+++ b/.env.example
@@ -26,9 +26,9 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=ffc505196f0c3d
+MAIL_PASSWORD=964396ad9d22f5
+MAIL_ENCRYPTION=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
